Create maven.yml (#36)
* Create maven.yml

* Update maven.yml

* Try full workflow

---------

Co-authored-by: Broknloop <broknloop@gmail.com>