@@ -1,11 +1,14 @@
 FROM amazoncorretto:21.0.1
+
+RUN mkdir /app
+
+COPY src/ /app/src/
+COPY target/vispana-0.0.1-SNAPSHOT.jar /app/target/vispana-0.0.1-SNAPSHOT.jar
+#COPY src /app
+
 WORKDIR /app
-
-# As github actions lacks support for Java 21, let's send all files and use Docker to build the
-# image and run it
-COPY ./ .
-
-RUN ./mvnw spring-boot:run
 
 # Expose the port that your Spring Boot application listens on (default is 8080)
 EXPOSE 4000
+
+ENTRYPOINT ["java","--enable-preview", "-jar", "target/vispana-0.0.1-SNAPSHOT.jar"]
